--- a/BreastCancerClassification.ipynb
+++ b/BreastCancerClassification.ipynb
@@ -78,53 +78,14 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
-   "outputs": [
-    {
-     "name": "stdout",
-     "text": [
-      "0 id\n",
-      "1 diagnosis\n",
-      "2 radius_mean\n",
-      "3 texture_mean\n",
-      "4 perimeter_mean\n",
-      "5 area_mean\n",
-      "6 smoothness_mean\n",
-      "7 compactness_mean\n",
-      "8 concavity_mean\n",
-      "9 concave points_mean\n",
-      "10 symmetry_mean\n",
-      "11 fractal_dimension_mean\n",
-      "12 radius_se\n",
-      "13 texture_se\n",
-      "14 perimeter_se\n",
-      "15 area_se\n",
-      "16 smoothness_se\n",
-      "17 compactness_se\n",
-      "18 concavity_se\n",
-      "19 concave points_se\n",
-      "20 symmetry_se\n",
-      "21 fractal_dimension_se\n",
-      "22 radius_worst\n",
-      "23 texture_worst\n",
-      "24 perimeter_worst\n",
-      "25 area_worst\n",
-      "26 smoothness_worst\n",
-      "27 compactness_worst\n",
-      "28 concavity_worst\n",
-      "29 concave points_worst\n",
-      "30 symmetry_worst\n",
-      "31 fractal_dimension_worst\n"
-     ],
-     "output_type": "stream"
-    }
+   "cell_type": "markdown",
+   "source": [
+    "Testing the git\n"
    ],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
+     "name": "#%% md\n",
      "is_executing": false
     }
    }
